# list-apt-installs

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  README.md  TODO  cmake_uninstall.cmake.in
man/: list-apt-installs.1
source/: list-apt-installs.c
